// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorPage /> should NOT render info and should render server error image image 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 2.4rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > *:not(:last-child) {
  margin-bottom: 2.4rem;
}

.c1 {
  padding: 0 1.2rem;
}

.c1 > svg {
  max-width: 100%;
  width: 60rem;
}

<div
    class="c0 c1"
    direction="column"
    spacing="3"
    width="100%"
    wrap="nowrap"
  >
    <svg>
      server-connection-error.svg
    </svg>
  </div>
</DocumentFragment>
`;

exports[`<ErrorPage /> should render "Something went wrong" and unexpected bug image 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin-top: 2.4rem;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > *:not(:last-child) {
  margin-bottom: 2.4rem;
}

.c2 {
  font-size: 2.4rem;
  font-family: Noto Sans,sans-serif;
  line-height: 1;
  margin-bottom: 2.4rem;
  margin-top: 0;
  text-align: center;
  line-height: 1.3;
}

.c1 {
  padding: 0 1.2rem;
}

.c1 > svg {
  max-width: 100%;
  width: 60rem;
}

<div
    class="c0 c1"
    direction="column"
    spacing="3"
    width="100%"
    wrap="nowrap"
  >
    <h3
      class="c2"
    >
      Something went wrong
    </h3>
    <svg>
      unexpected-bug.svg
    </svg>
  </div>
</DocumentFragment>
`;
